# PET

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/conv2gemm/: README.md  conv2gemm.cc  conv2gemm_eval.py  gemm.cc  gemm_test.cc  tvm_gemm.py  tvm_gemm_autotune_v1.py  tvm_gemm_autotune_v2.py  tvm_gemm_autotune_v3.py  utils.h
benchmark/cudnn/: README.md  conv.cu  convopt.py  makefile
benchmark/cudnn_data/: data_test1.csv  data_test2.csv
benchmark/cudnn_test/: get_args.py  pyrun.py  solve.py
benchmark/cudnn_test/summary/: alexnet.sum  mobilenet_v2.sum  resnet18.sum  resnext50_32x4d.sum  vgg16.sum
benchmark/dsl/: dsl.py
benchmark/fusion/: conv_bn_relu_fuse_test.cu
benchmark/layoutchange/: readme.md
benchmark/layoutchange/1/: chwn.py  cnhw.py  nchw.cu  nchw.py  nhwc.cu  nhwc.py  template.py
benchmark/layoutchange/2/: div2h.py  div2w.py  div4.py
benchmark/layoutchange/3/: rearrange.py
benchmark/layoutchange/4/: cut.py  link.py
benchmark/models/scripts/: bert_onnx.py  export_as_onnx.py
benchmark/models/summary/: alexnet.sum  inception.sum  mobilenet_v2.sum  resnet18.sum  resnext50_32x4d.sum  vgg16.sum
benchmark/performance_measurement/: conv2d.cc  main.cc  makefile  operator.h  readme.txt  simulator.cc  simulator.h  utils.h
benchmark/performance_measuring_v2/: conv2d.cc  main.cc  makefile  matmul.cc  operator.h  simulator.cc  simulator.h  utils.cc  utils.h
benchmark/search/: conv_test.cc  makefile  utils.h
benchmark/tvm/: conv-autotune.py  conv-grouped.py  conv-winograd.py  convopt.py  tvm-onnx.py
include/: cmutator.h  code_engine.h  common.h  custom_ops.cuh  dim.h  fake_mutation.h  ffi.h  generator.h  graph.h  mutator.h  operator.h  perf.h  perf_engine.h  search_engine.h  tensor.h  transpose.h
include/ffi/: ffi.h  ffi_embed.h  ffi_pet.h
include/nnet/: dmutator.h  expr.h  nmutator.h  visitor.h
include/nnet/Visitor/: Interpreter.h
models-ae/: berts.py  dilated_onnx.py  export_as_onnx.py  generate_onnx.sh
operator_ae/: operator_ae_show_results.py
operator_ae/ansor/: generate_task.py  osdi21_bmm-1-nico1.py  osdi21_bmm-1-nico2.py  osdi21_conv-1.py  osdi21_conv-2-mut-nico1.py  osdi21_conv-2-mut-nico2.py  osdi21_conv-2-mut-nico3.py  osdi21_conv-3-nico2.py  osdi21_conv-4-nico1.py  osdi21_conv-5-nico1.py  osdi21_conv-5-nico2.py  osdi21_conv.py  osdi21_groupconv.py
operator_ae/autotvm/: tvm_bmm.py  tvm_cond2d_eval2.py  tvm_conv2d.py  tvm_dense.py
operator_ae/cudnn/: Makefile  conv.cu  conv.py  dilated_conv.py  gemm.cu  gemm.py  group_conv.py  run.sh
pet-ae/: run_bert.sh  run_e2e.sh  run_param.sh  run_param_csr.sh  run_policy.sh  run_policy_3d.sh  run_policy_bert.sh  run_policy_csrnet.sh  run_policy_inception.sh  run_policy_resnet.sh
python/: setup.py
python/cpp_plugin/: __init__.py  export_onnx.py  gen_ansor_op.py  gen_simple_op.py  import_onnx.py
python/tpm/: __init__.py  analyze_onnx.py
python/tpm/_cython/: CCore.pxd  core.pyx
scripts/: handle_log.py  run_models_e2e.sh  run_single_rule_tests.sh  run_singleop_1_resnet.sh  run_singleop_2_dilated.sh
src/: custom_ops.cu  ffi.cc  res
src/Graph/: code_engine.cc  graph.cc  operator.cc  perf_engine.cc  search_engine.cc  tensor.cc  trans_eliminator.cc
src/Mutant/: cmutator.cc  generator.cc  reciprocity.cc
src/Test/: SampleGraph1.cpp  SampleGraph2.cpp  SampleGraph3.cpp  SampleGraph4.cpp  batch_gemm_test.cc  cache_test_1.cc  cache_test_2.cc  cache_test_3.cc  concat_test_1.cc  conv_test_1.cc  conv_test_2.cc  conv_test_3.cc  conv_test_4_perf.cc  conv_test_5_trans_kernel.cc  convtrans_test_1.cc  convtrans_test_2.cc  dilation_test.cpp  eliminator_test_1.cc  extend_test_1.cc  fuse_activation.cpp  gemm_test_1_perf.cc  gemm_test_2_conv1x1_perf.cc  gen_transpose.cpp  graph_stat_test_1_transpose_group.cc  graph_stat_test_2_batchmm.cc  group_conv_test_1.cc  group_conv_test_2.cc  import_onnx.cpp  import_onnx_cmutator.cpp  import_onnx_nnet.cpp  import_onnx_nnet_depth.cpp  import_onnx_origin.cpp  mutant_test_1.cc  mutant_test_2.cc  mutant_test_3.cc  pad_slice_test.cc  perf_pool.cc  single_op_test_1.cc  single_op_test_2.cc  single_op_test_3.cc  (+31 more)
src/Transpose/: dilated_sample.cpp  makefile  sample.cpp  transpose.cc
src/ffi/: ffi.cc  ffi_embed.cc  ffi_pet.cc
src/nnet/: dlt.cc  utils.cc
src/nnet/Pass/: Rule8GuidedDLT.cc
src/nnet/Visitor/: PatternMatcher.cc
taso-ae/: bert.py  inceptionv3.py  onnx_test.py  run_e2e.sh
tf-ae/: README.md  export-bert.py  export-dilated.py  export-torchvision.py  freeze.sh  load_cuda10.0.sh  onnx2pb.py  run.sh  run3d.py  runtf-bert.py  runtf.py  show_results_tf.sh  show_results_xla.sh  timeline.js
trt-ae/: Makefile  README.md  dilated.py  run.sh  runtrt-3d.cpp  runtrt-4d.cpp  runtrt-5d.cpp
